tests/neg/operators/test-01.ts
function main(){
  let y = 0;
  let x = random();
  y = x + y;
  assert (0 <= y);
}


